# dupico_firmware

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSFATConfig.h  main.c
src/hardware/: CMakeLists.txt
src/hardware/sdcard/: CMakeLists.txt  hw_config.c
src/hardware/shifters/: CMakeLists.txt  piso.pio  piso_shifter.c  piso_shifter.h  sipo.pio  sipo_shifter.c  sipo_shifter.h
src/hardware/ssd1306_i2c/: CMakeLists.txt  raspberry26x32.h  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h
src/sys/: CMakeLists.txt  sys.c  sys.h
src/tasks/: CMakeLists.txt  cmd_executor_task.c  cmd_executor_task.h  command_hub_task.c  command_hub_task.h  data_structs.c  data_structs.h  ic_command_executor_task.c  ic_command_executor_task.h  ic_interfacer_task.c  ic_interfacer_task.h  led_status_task.c  led_status_task.h  shifter_io_task.c  shifter_io_task.h
src/tasks/ic_handlers/: CMakeLists.txt  basic_handlers_io.c  basic_handlers_io.h  generic_ic_handler.c  generic_ic_handler.h  ic_handlers.c  ic_handlers.h  unknown_ic_handler.c  unknown_ic_handler.h
src/tasks/interface_tasks/: CMakeLists.txt  cli_interface_task.c  cli_interface_task.h  oled_interface_task.c  oled_interface_task.h
src/tasks/interface_tasks/cmd_handlers/: CMakeLists.txt  bin_cmd_handler.c  bin_cmd_handler.h  cmd_handler.h
src/tasks/interface_tasks/cmd_handlers/special_modes/: CMakeLists.txt  cxfer.c  cxfer.h
src/utils/: CMakeLists.txt  binutils.c  binutils.h  common_macros.h  custom_debug.c  custom_debug.h  strutils.c  strutils.h
